# ais-conflict-intelligence

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/: 2024-03-01
data_external/: acled_events.csv  world_ports.csv
docs/: report.md
notebooks/: 01_EDA.ipynb  02_preprocessing_validation.ipynb  03_visualization.ipynb  04_conflict_correlation.ipynb  05_model_development.ipynb
scripts/: combine_aggregated.py  generate_report.py  run_pipeline.py  run_pipeline.sh
src/: __init__.py
src/analysis/: __init__.py  behavioral_analyzer.py  correlation_analyzer.py  destination_analyzer.py  rot_analyzer.py  traffic_analyzer.py
src/models/: __init__.py  anomaly_model.py  baseline.py  conflict_predictor.py  evaluator.py
src/preprocessing/: __init__.py  aggregator.py  cleaner.py  feature_engineer.py  loader.py
src/visualization/: __init__.py  conflict_overlay.py  spatial_viz.py  statistical_viz.py  temporal_viz.py
tests/: __init__.py  fix_feature_engineer.py  test_aggregator.py  test_cleaner.py  test_loader.py
